# local-macos-superwhisper

./: README.md  pyproject.toml  speech_to_text.py
